images link fixed

--- a/cart.html
+++ b/cart.html
@@ -3,7 +3,7 @@
       <h2 class="heading">Your Cart</h2>
       <div class="cart-items">
         <div class="cart-item">
-          <img src="images/4.png" alt="Product 1">
+          <img src="./assets/images/4.png" alt="Product 1">
           <div class="item-details">
             <h3>Indoor Plant</h3>
             <p>Price: $20</p>
@@ -17,7 +17,7 @@
 
         <div class="cart-items">
             <div class="cart-item">
-              <img src="images/4.png" alt="Product 1">
+              <img src="./assets/images/4.png" alt="Product 1">
               <div class="item-details">
                 <h3>Indoor Plant</h3>
                 <p>Price: $20</p>
@@ -32,7 +32,7 @@
 
           <div class="cart-items">
             <div class="cart-item">
-              <img src="images/4.png" alt="Product 1">
+              <img src="./assets/images/4.png" alt="Product 1">
               <div class="item-details">
                 <h3>Indoor Plant</h3>
                 <p>Price: $20</p>
