--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <section class="home" id="home">
 
     <div class="image">
-        <img src="./assets/images/8.png" alt="">
+        <img src="assets/images/8.png" alt="">
     </div>
 
     <div class="content">
@@ -15,7 +15,7 @@
 <section class="banner-container">
 
     <div class="banner">
-        <img src="./assets/images/9.jpg" alt="">
+        <img src="assets/images/9.jpg" alt="">
         <div class="content">
             <h3>special offer</h3>
             <p>upto 45% off</p>
@@ -24,7 +24,7 @@
     </div>
 
     <div class="banner">
-        <img src="./assets/images/10.jpg" alt="">
+        <img src="assets/images/10.jpg" alt="">
         <div class="content">
             <h3>limited offer</h3>
             <p>upto 50% off</p>
@@ -45,19 +45,19 @@
             <div class="box">
                 <h3>Indoor <pre>Plants</pre> </h3>
                 <p>upto 50% off</p>
-                <img src="./assets/images/4.png" height="188px" class="rounded" alt="">
+                <img src="assets/images/4.png" height="188px" class="rounded" alt="">
                 <a href="#" class="btn">Explore Now</a>
             </div>
             <div class="box">
                 <h3>Outdoor <pre>Plants</pre></h3>
                 <p>upto 44% off</p>
-                <img src="./assets/images/5.png" height="188px" class="rounded my-3" alt="">
+                <img src="assets/images/5.png" height="188px" class="rounded my-3" alt="">
                 <a href="#" class="btn">Explore Now</a>
             </div>
             <div class="box">
                 <h3>Flower <pre>Plants</pre></h3>
                 <p>upto 35% off</p>
-                <img src="./assets/images/6.png" height="188px" alt="">
+                <img src="assets/images/6.png" height="188px" alt="">
                 <a href="#" class="btn">Explore Now</a>
             </div>
         
@@ -80,7 +80,7 @@
                 <a href="#" class="fas fa-share"></a>
                 <a href="#" class="fas fa-eye"></a>
             </div>
-            <a href="#!productdetail"><img src="./assets/images/4.png" alt=""></a>
+            <a href="#!productdetail"><img src="assets/images/4.png" alt=""></a>
             <h3>organic banana</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
@@ -105,7 +105,7 @@
                 <a href="#" class="fas fa-share"></a>
                 <a href="#" class="fas fa-eye"></a>
             </div>
-            <img src="./assets/images/4.png" alt="">
+            <img src="assets/images/4.png" alt="">
             <h3>organic tomato</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
@@ -130,7 +130,7 @@
                 <a href="#" class="fas fa-share"></a>
                 <a href="#" class="fas fa-eye"></a>
             </div>
-            <img src="./assets/images/4.png" alt="">
+            <img src="assets/images/4.png" alt="">
             <h3>organic orange</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
