--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <div class="header-1">
 
-            <a href="#" class="logo"><img src="./assets/images/logo.png" height="70px" alt="Logo">Plant Palace</a>
+            <a href="#" class="logo"><img src="assets/images/logo.png" height="70px" alt="Logo">Plant Palace</a>
 
             <form action="" class="search-box-container">
                 <input type="search" id="search-box" placeholder="search here...">
@@ -62,7 +62,7 @@
         <div class="box-container">
     
             <div class="box">
-                <a href="#" class="logo"><img src="./assets/images/logo.png" height="70px" alt="Logo">Plant Palace</a>
+                <a href="#" class="logo"><img src="assets/images/logo.png" height="70px" alt="Logo">Plant Palace</a>
                 <p></p>
                 <div class="share">
                     <a href="#" class="btn fab fa-facebook-f"></a>
