--- a/productdetail.html
+++ b/productdetail.html
@@ -2,7 +2,7 @@
     <div class="container">
       <div class="product-container">
         <div class="product-image">
-          <img src="images/1.jpg" class="img-fluid" alt="Product 1">
+          <img src="assets/images/1.jpg" class="img-fluid" alt="Product 1">
         </div>
         <div class="product-info">
           <h2 class="product-title">Product Name</h2>
@@ -45,7 +45,7 @@
           <h4>Public Reviews</h4>
           <div class="review">
             <div class="review-header">
-              <img src="images/profile.jpg" alt="Reviewer's Profile">
+              <img src="assets/images/profile.jpg" alt="Reviewer's Profile">
               <p class="review-author">John Doe</p>
             </div>
             <p class="review-text">
