--- a/products.html
+++ b/products.html
@@ -12,7 +12,7 @@
                 <a href="#" class="fas fa-share"></a>
                 <a href="#" class="fas fa-eye"></a>
             </div>
-            <img src="./assets/images/4.png" alt="">
+            <img src="assets/images/4.png" alt="">
             <h3>organic banana</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
@@ -37,7 +37,32 @@
                 <a href="#" class="fas fa-share"></a>
                 <a href="#" class="fas fa-eye"></a>
             </div>
-            <img src="./assets/images/4.png" alt="">
+            <img src="assets/images/4.png" alt="">
+            <h3>organic tomato</h3>
+            <div class="stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i>
+            </div>
+            <div class="price"> $10.50 <span> $13.20 </span> </div>
+            <div class="quantity">
+                <span>quantity : </span>
+                <input type="number" min="1" max="1000" value="1">
+                <span> /kg </span>
+            </div>
+            <a href="#" class="btn">add to cart</a>
+        </div>
+
+        <div class="box">
+            <span class="discount">-45%</span>
+            <div class="icons">
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="fas fa-share"></a>
+                <a href="#" class="fas fa-eye"></a>
+            </div>
+            <img src="assets/images/4.png" alt="">
             <h3>organic tomato</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
@@ -87,32 +112,7 @@
                 <a href="#" class="fas fa-share"></a>
                 <a href="#" class="fas fa-eye"></a>
             </div>
-            <img src="./assets/images/4.png" alt="">
-            <h3>organic tomato</h3>
-            <div class="stars">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star-half-alt"></i>
-            </div>
-            <div class="price"> $10.50 <span> $13.20 </span> </div>
-            <div class="quantity">
-                <span>quantity : </span>
-                <input type="number" min="1" max="1000" value="1">
-                <span> /kg </span>
-            </div>
-            <a href="#" class="btn">add to cart</a>
-        </div>
-
-        <div class="box">
-            <span class="discount">-45%</span>
-            <div class="icons">
-                <a href="#" class="fas fa-heart"></a>
-                <a href="#" class="fas fa-share"></a>
-                <a href="#" class="fas fa-eye"></a>
-            </div>
-            <img src="./assets/images/4.png" alt="">
+            <img src="assets/images/4.png" alt="">
             <h3>organic tomato</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
@@ -137,7 +137,7 @@
                 <a href="#" class="fas fa-share"></a>
                 <a href="#" class="fas fa-eye"></a>
             </div>
-            <img src="./assets/images/4.png" alt="">
+            <img src="assets/images/4.png" alt="">
             <h3>organic orange</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
