--- a/home.html
+++ b/home.html
@@ -46,19 +46,19 @@
                 <h3>Indoor <pre>Plants</pre> </h3>
                 <p>upto 50% off</p>
                 <img src="assets/images/4.png" height="188px" class="rounded" alt="">
-                <a href="#" class="btn">Explore Now</a>
+                <a href="#!category" class="btn">Explore Now</a>
             </div>
             <div class="box">
                 <h3>Outdoor <pre>Plants</pre></h3>
                 <p>upto 44% off</p>
                 <img src="assets/images/5.png" height="188px" class="rounded my-3" alt="">
-                <a href="#" class="btn">Explore Now</a>
+                <a href="#!category" class="btn">Explore Now</a>
             </div>
             <div class="box">
                 <h3>Flower <pre>Plants</pre></h3>
                 <p>upto 35% off</p>
                 <img src="assets/images/6.png" height="188px" alt="">
-                <a href="#" class="btn">Explore Now</a>
+                <a href="#!category" class="btn">Explore Now</a>
             </div>
         
         </div>
