--- a/productdetail.html
+++ b/productdetail.html
@@ -5,7 +5,7 @@
           <img src="assets/images/1.jpg" class="img-fluid" alt="Product 1">
         </div>
         <div class="product-info">
-          <h2 class="product-title">Product Name</h2>
+          <h2 class="product-title mt-4 fw-bold text-success">Product Name</h2>
           <div class="average-rating">
             <span class="rating-stars">★★★★★</span>
             <span class="rating-value">4.5</span>
@@ -19,8 +19,8 @@
         </div>
       </div>
       <div class="product-details">
-        <h3 style="margin-top: 50px">Product Details</h3>
-        <p class="product-description">
+        <h3 class="text-success fw-bold">Product Details</h3>
+        <p class="product-description text-secondary">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.
           Vivamus accumsan magna at sem bibendum, nec lacinia lorem ullamcorper.
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla minus voluptates, cum eius cupiditate incidunt adipisci qui magni omnis quam nisi veritatis ea blanditiis. In nemo distinctio iusto, doloremque vitae eaque fuga quia cumque quasi aliquam, est nam itaque? Non sequi eveniet illo consequatur quo rem qui in eum nobis sit! Voluptates consectetur reiciendis nesciunt, aliquam ex tenetur quos dolores animi, voluptatem similique numquam harum possimus dignissimos, libero expedita quia ad ratione! Sequi nesciunt tempore blanditiis quo. Non, ipsam tempora quas odio, veniam nemo dolorem eos odit adipisci error magni blanditiis, perferendis inventore voluptate! Incidunt ipsum animi, eveniet quas ipsa, exercitationem iusto, iste aspernatur harum laboriosam magni eius asperiores. Ea quos at reiciendis, obcaecati perspiciatis a ducimus autem unde repellendus distinctio dolorum, perferendis, blanditiis porro esse excepturi deleniti magnam praesentium itaque recusandae facere. Ad repellat aperiam asperiores repudiandae voluptas illo magnam? Quaerat veniam ut quae illo quo quasi nostrum eveniet aperiam ipsa, fugiat assumenda sapiente culpa neque at! Pariatur, distinctio repellendus? Itaque ab libero praesentium! Molestias fuga sequi officiis sint sunt. Ea eaque dolore sit? Nihil a nemo expedita exercitationem quos itaque laudantium assumenda quas, blanditiis nam saepe ea in! Recusandae placeat necessitatibus architecto nam voluptates omnis quos aut quam quasi temporibus. Distinctio nam, enim asperiores similique eius blanditiis magni repellendus impedit consequuntur. Natus, eum? Non enim repellat laborum fugit, numquam voluptates modi provident asperiores, quibusdam similique nesciunt soluta explicabo praesentium, ducimus expedita distinctio sequi ad odio! Iste accusantium mollitia commodi placeat odit adipisci voluptatum harum totam nesciunt fuga autem accusamus necessitatibus voluptas debitis iusto, explicabo officiis? Praesentium aliquam in aut minus. Odit eligendi ipsam, incidunt laborum dignissimos aperiam quae temporibus? Architecto fuga ut reprehenderit earum esse tenetur asperiores id qui placeat. Voluptate blanditiis nostrum a commodi eos hic pariatur quaerat, qui quas quibusdam consectetur vitae enim atque nobis delectus.
