--- a/profile.html
+++ b/profile.html
@@ -5,7 +5,7 @@
         <div class="col-lg-4">
           <div class="card mb-4">
             <div class="card-body text-center">
-              <img src="images/profile.jpg" alt="avatar"
+              <img src="assets/images/profile.jpg" alt="avatar"
                 class="rounded-circle img-fluid" style="width: 150px;">
               <h5 class="my-3 fs-1">SFC Brainics</h5>
               <p class="text-muted mb-1 fs-2">Software Engineer</p>
