--- a/home.html
+++ b/home.html
@@ -46,19 +46,19 @@
                 <h3>Indoor <pre>Plants</pre> </h3>
                 <p>upto 50% off</p>
                 <img src="assets/images/4.png" height="188px" class="rounded" alt="">
-                <a href="#!category" class="btn">Explore Now</a>
+                <a href="#!/category?category=indoor" class="btn">Explore Now</a>
             </div>
             <div class="box">
                 <h3>Outdoor <pre>Plants</pre></h3>
                 <p>upto 44% off</p>
                 <img src="assets/images/5.png" height="188px" class="rounded my-3" alt="">
-                <a href="#!category" class="btn">Explore Now</a>
+                <a href="#!/category?category=outdoor" class="btn">Explore Now</a>
             </div>
             <div class="box">
                 <h3>Flower <pre>Plants</pre></h3>
                 <p>upto 35% off</p>
                 <img src="assets/images/6.png" height="188px" alt="">
-                <a href="#!category" class="btn">Explore Now</a>
+                <a href="#!/category?category=flowering" class="btn">Explore Now</a>
             </div>
         
         </div>
@@ -71,83 +71,8 @@
 
     <h1 class="heading">latest <span>products</span></h1>
 
-    <div class="box-container">
-
-        <div class="box">
-            <span class="discount">-33%</span>
-            <div class="icons">
-                <a href="#" class="fas fa-heart"></a>
-                <a href="#" class="fas fa-share"></a>
-                <a href="#" class="fas fa-eye"></a>
-            </div>
-            <a href="#!productdetail"><img src="assets/images/4.png" alt=""></a>
-            <h3>organic banana</h3>
-            <div class="stars">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star-half-alt"></i>
-            </div>
-            <div class="price"> $10.50 <span> $13.20 </span> </div>
-            <div class="quantity">
-                <span>quantity : </span>
-                <input type="number" min="1" max="1000" value="1">
-                <span> /kg </span>
-            </div>
-            <a href="#" class="btn">add to cart</a>
-        </div>
-
-        <div class="box">
-            <span class="discount">-45%</span>
-            <div class="icons">
-                <a href="#" class="fas fa-heart"></a>
-                <a href="#" class="fas fa-share"></a>
-                <a href="#" class="fas fa-eye"></a>
-            </div>
-            <img src="assets/images/4.png" alt="">
-            <h3>organic tomato</h3>
-            <div class="stars">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star-half-alt"></i>
-            </div>
-            <div class="price"> $10.50 <span> $13.20 </span> </div>
-            <div class="quantity">
-                <span>quantity : </span>
-                <input type="number" min="1" max="1000" value="1">
-                <span> /kg </span>
-            </div>
-            <a href="#" class="btn">add to cart</a>
-        </div>
-
-        <div class="box">
-            <span class="discount">-52%</span>
-            <div class="icons">
-                <a href="#" class="fas fa-heart"></a>
-                <a href="#" class="fas fa-share"></a>
-                <a href="#" class="fas fa-eye"></a>
-            </div>
-            <img src="assets/images/4.png" alt="">
-            <h3>organic orange</h3>
-            <div class="stars">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star-half-alt"></i>
-            </div>
-            <div class="price"> $10.50 <span> $13.20 </span> </div>
-            <div class="quantity">
-                <span>quantity : </span>
-                <input type="number" min="1" max="1000" value="1">
-                <span> /kg </span>
-            </div>
-            <a href="#" class="btn">add to cart</a>
-        </div>
-
+    <div class="box-container" id="latest_products">
+        
     </div>
 
 </section>
