--- a/index.html
+++ b/index.html
@@ -132,6 +132,44 @@
         );
         app.controller('homeController', function($scope, $rootScope){
             $rootScope.PageTitle = "Home";
+            fetch("assets/json/plants.json").then(
+                function(response){
+                    response.json().then(
+                        function(res){
+                            const flowering_plants = res.flowering_plants;
+                            const indoor_plants = res.indoor_plants;
+                            const outdoor_plants = res.outdoor_plants;
+                            const element = document.getElementById("latest_products");
+                            const box_1 = `<div class="box">
+            <span class="discount">-33%</span>
+            <div class="icons">
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="fas fa-share"></a>
+                <a href="#" class="fas fa-eye"></a>
+            </div>
+            <a href=#!productdetail?plantname=${flowering_plants[0].plant_name}><img src="assets/images/4.png" alt=""></a>
+            <h3>${flowering_plants[0].plant_name}</h3>
+            <div class="stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i>
+            </div>
+            <div class="price"> ${flowering_plants[0].discounted_price} <span> ${flowering_plants[0].original_price} </span> </div>
+            <div class="quantity">
+                <span>quantity : </span>
+                <input type="number" min="1" max="1000" value="1">
+                <span> /kg </span>
+            </div>
+            <a href="#" class="btn">add to cart</a>
+        </div>`;
+        element.innerHTML = '';
+        element.innerHTML = box_1;
+                        }
+                    )
+                }
+            )
         })
         app.controller('contactController', function($scope, $rootScope){
             $rootScope.PageTitle = "Contact";
@@ -145,15 +183,143 @@
         app.controller('feedbackController', function($scope, $rootScope){
             $rootScope.PageTitle = "Feedback";
         })
-        app.controller('productController', function($scope, $rootScope){
+        app.controller('productsController', function($scope, $rootScope){
             $rootScope.PageTitle = "Product";
+            fetch("assets/json/plants.json").then(
+                function(response){
+                    response.json().then(
+                        function(res){
+                            let blank_string = '';
+                            const all_plants = document.getElementById("all_produts");
+                            const flowering_plants = res.flowering_plants;
+                            const outdoor_plants = res.outdoor_plants;
+                            const indoor_plants = res.indoor_plants;
+                            for(let i = 0; i < flowering_plants.length; i++){
+                                blank_string += `
+                                <div class="box">
+            <h3>${flowering_plants[i].plant_name}</h3>
+            <p>Original Price: ${flowering_plants[i].original_price}</p>
+            <p>Discounted Price: ${flowering_plants[i].discounted_price}</p>
+            <img src="${flowering_plants[i].image_url}" height="188px" class="rounded" alt="">
+            <a href="#!category" class="btn">Add to Cart</a>
+        </div>
+                                `;
+                            }
+                            for(let i = 0; i < outdoor_plants.length; i++){
+                                blank_string += `
+                                <div class="box">
+            <h3>${outdoor_plants[i].plant_name}</h3>
+            <p>Original Price: ${outdoor_plants[i].original_price}</p>
+            <p>Discounted Price: ${outdoor_plants[i].discounted_price}</p>
+            <img src="${outdoor_plants[i].image_url}" height="188px" class="rounded" alt="">
+            <a href="#!category" class="btn">Add to Cart</a>
+        </div>
+                                `;
+                            }
+                            for(let i = 0; i < indoor_plants.length; i++){
+                                blank_string += `
+                                <div class="box">
+            <h3>${indoor_plants[i].plant_name}</h3>
+            <p>Original Price: ${indoor_plants[i].original_price}</p>
+            <p>Discounted Price: ${flowering_plants[i].discounted_price}</p>
+            <img src="${indoor_plants[i].image_url}" height="188px" class="rounded" alt="">
+            <a href="#!category" class="btn">Add to Cart</a>
+        </div>
+                                `;
+                            }
+                            all_plants.innerHTML = blank_string ;
+                        }
+                    )
+                }
+            )
         })
         app.controller('productdetailController', function($scope, $rootScope){
             $rootScope.PageTitle = "Product Detail";
+            const url = new URL(window.location.href);
+            console.log(url.search);
         })
-        app.controller('categoryController', function($scope, $rootScope){
-            $rootScope.PageTitle = "Category";
-        })
+        // app.controller('categoryController', function($scope, $rootScope){
+        //     $rootScope.PageTitle = "Category";
+        // })
+        app.controller('categoryController', function($scope, $rootScope, $routeParams){
+        $rootScope.PageTitle = "Category";
+
+        
+
+        // Load JSON data
+        $scope.plantsData = {
+            "flowering_plants": [
+            {
+                "plant_name":"Rose",
+                "original_price":"$12.50",
+                "discounted_price":"$20.50",
+                "image_url":"assets/images/flower_plants/rose.png"
+            },
+            {
+                "plant_name":"Daffodils ",
+                "original_price":"$13.50",
+                "discounted_price":"$10.50",
+                "image_url":"assets/images/flower_plants/defodils.png"
+            }
+        ],
+            "outdoor_plants": [
+            {
+                "plant_name":"Lavender",
+                "original_price":"$10.50",
+                "discounted_price":"$5.50",
+                "image_url":"assets/images/outdoor_plants/lavander.png"
+            },
+            {
+                "plant_name":"Japanese Maple",
+                "original_price":"$20.50",
+                "discounted_price":"$15.50",
+                "image_url":"assets/images/outdoor_plants/maple.png"
+            }
+
+        ],
+            "indoor_plants": [
+            {
+                "plant_name":"aloe Vera",
+                "original_price":"$25.50",
+                "discounted_price":"$19.50",
+                "image_url":"assets/images/indoor_plants/alovera.png"
+            },
+            {
+                "plant_name":"Palm Plant",
+                "original_price":"$10.50",
+                "discounted_price":"$7.50",
+                "image_url":"assets/images/indoor_plants/palm.png"
+            },
+            {
+                "plant_name":"aloe Vera",
+                "original_price":"$25.50",
+                "discounted_price":"$19.50",
+                "image_url":"assets/images/indoor_plants/alovera.png"
+            },
+            {
+                "plant_name":"Pearl Plant",
+                "original_price":"$10.50",
+                "discounted_price":"$7.50",
+                "image_url":"assets/images/indoor_plants/pearl.png"
+            }
+        ]
+        };
+
+        // Get the category parameter from the URL
+        var category = $routeParams.category;
+
+        // Display plants based on the category parameter
+        if (category === 'indoor') {
+            $scope.plants = $scope.plantsData.indoor_plants;
+        } else if (category === 'outdoor') {
+            $scope.plants = $scope.plantsData.outdoor_plants;
+        } else if (category === 'flowering') {
+            $scope.plants = $scope.plantsData.flowering_plants;
+        }
+    });
+
+    
+
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
